<resources>
    <string name="app_name">Keep running</string>
    <string name="running">Running</string>
    <string name="cycling">Cycling</string>
    <string name="fragment_running">FRAGMENT RUNNING</string>
    <string name="fragment_cycling">Fragment Cycling</string>
    <string name="run">Running</string>
    <string name="running_heading">Running heading</string>
    <string name="_5km_heading">5km</string>
    <string name="_10km_heading">10km</string>
    <string name="_15km_heading">15km</string>
    <string name="_20km_heading">20km</string>
    <string name="cycling_image">Cycling Image</string>
    <string name="cycling_header">Cycling</string>
    <string name="longest_ride">Longest Ride</string>
    <string name="biggest_climb">Biggest Climb</string>
    <string name="best_speed">Best Speed</string>
    <string name="reset_running_records">Reset Running Records</string>
    <string name="reset_cycling_records">Reset Cycling Records</string>
    <string name="reset_all_records">Reset All Records</string>
    <string name="page_in_progress">Page in progress...</string>
    <string name="record">Record</string>
    <string name="date">Date</string>
    <string name="button_save">SAVE</string>
    <string name="button_delete">CLEAR RECORD</string>
</resources>